finalized with text

--- a/index.html
+++ b/index.html
@@ -86,11 +86,9 @@
                     </div>
                 </div>
                 <div class="flex flex-col gap-2 p-4 font-sans text-center">
-                    <h3 class="font-semibold uppercase">Duis Aute</h3>
+                    <h3 class="font-semibold uppercase">Residential Interior Design</h3>
                     <hr class="border-t-black">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque qui quisquam quia vel facilis a
-                        ipsa minus voluptatem temporibus incidunt laborum accusamus modi cupiditate, ipsum maiores sit
-                        in ab commodi.</p>
+                    <p>Designing and decorating private homes, apartments, or condominiums to create functional and aesthetically pleasing living spaces.</p>
                 </div>
             </div>
             <div class="">
@@ -103,11 +101,9 @@
                     </div>
                 </div>
                 <div class="flex flex-col gap-2 p-4 font-sans text-center">
-                    <h3 class="font-semibold uppercase">Duis Aute</h3>
+                    <h3 class="font-semibold uppercase">Space Planning</h3>
                     <hr class="border-t-black">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque qui quisquam quia vel facilis a
-                        ipsa minus voluptatem temporibus incidunt laborum accusamus modi cupiditate, ipsum maiores sit
-                        in ab commodi.</p>
+                    <p>Assessing the layout and flow of a space to optimize its use, ensuring efficient and practical design solutions.</p>
                 </div>
             </div>
             <div class="">
@@ -120,11 +116,9 @@
                     </div>
                 </div>
                 <div class="flex flex-col gap-2 p-4 font-sans text-center">
-                    <h3 class="font-semibold uppercase">Duis Aute</h3>
+                    <h3 class="font-semibold uppercase">Art and Decor Selection</h3>
                     <hr class="border-t-black">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque qui quisquam quia vel facilis a
-                        ipsa minus voluptatem temporibus incidunt laborum accusamus modi cupiditate, ipsum maiores sit
-                        in ab commodi.</p>
+                    <p>Assisting clients in selecting and placing artwork, decorative accessories, and other decor elements to enhance the overall design.</p>
                 </div>
             </div>
     </section>
@@ -134,26 +128,26 @@
         <div class="md:col-span-3"></div>
         <div class="col-span-10 md:col-span-4 min-h-[60vh] bg-sand p-6 py-24">
             <h1 class="text-3xl uppercase">Who We Are</h1>
-            <p class="py-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro expedita quas deleniti consectetur amet nesciunt quia repudiandae, impedit id soluta vitae nam consequatur. Libero magni ipsum molestiae, eius adipisci eligendi.</p>
+            <p class="py-6"> Simplicity meets sophistication. We specialize in crafting clean and minimalistic interiors that transform spaces into timeless masterpieces. Explore our portfolio and let us inspire your vision of refined elegance.</p>
             <div class="uppercase">
                 <a class="p-1 px-3 border border-black" href="">Find Out More</a>
             </div>
         </div>
         <div class="md:col-span-5"></div>
-        <div class="col-span-6 p-2 text-center md:col-span-2 bg-sand">Brand Name</div>
-        <div class="col-span-6 p-2 text-center md:col-span-2 bg-sand">Brand Name</div>
-        <div class="col-span-6 p-2 text-center md:col-span-2 bg-sand">Brand Name</div>
-        <div class="col-span-6 p-2 text-center md:col-span-2 bg-sand">Brand Name</div>
-        <div class="col-span-6 p-2 text-center md:col-span-2 bg-sand">Brand Name</div>
-        <div class="col-span-6 p-2 text-center md:col-span-2 bg-sand">Brand Name</div>
+        <div class="col-span-6 p-2 text-center md:col-span-2 bg-sand">Professionalism</div>
+        <div class="col-span-6 p-2 text-center md:col-span-2 bg-sand">Elegance</div>
+        <div class="col-span-6 p-2 text-center md:col-span-2 bg-sand">Timeless</div>
+        <div class="col-span-6 p-2 text-center md:col-span-2 bg-sand">Minimalistic</div>
+        <div class="col-span-6 p-2 text-center md:col-span-2 bg-sand">Personalized</div>
+        <div class="col-span-6 p-2 text-center md:col-span-2 bg-sand">Innovative</div>
 
     </section>
 
     <!-- Duis Aute Irure -->
     <section class="text-center p-[5%]">
         <div class="flex flex-col max-w-lg gap-4 p-6 mx-auto">
-            <h1 class="text-5xl font-display">Duis Aute Irure</h1>
-            <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quos voluptatum dolores hic aspernatur ipsam provident, delectus debitis iste recusandae perferendis fugit dicta reprehenderit minima eius voluptatem alias ex odit?</p>
+            <h1 class="text-5xl font-display">Discover Our Artistry in Design</h1>
+            <p class="">Welcome to the heart of our creative journey – our portfolio. At PureSpace Design, we believe that every space has a story waiting to be told. Our portfolio is a testament to our passion for crafting clean, minimalistic interiors that transcend the ordinary and transform spaces into extraordinary experiences.</p>
         </div>
         <div class="grid gap-4 py-4 md:grid-cols-3">
             <div class="border border-stone-900">
@@ -246,19 +240,17 @@
     <footer class="grid md:grid-cols-10 p-5p">
         <!-- column -->
         <div class="col-span-10 p-4 md:pr-8 md:col-span-3">
-            <h2 class="text-2xl"> Logo </h2>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. </p>
+            <h2 class="text-2xl"> PureSpace Design </h2>
+            <p> A sense of purity and simplicity. </p>
         </div>
 
         <!-- column -->
         <div class="col-span-5 p-4 sm:col-span-2">
             <h4 class="text-xl uppercase"> Our Services </h4>
             <nav>
-                <a href="#"> Lorem ipsum </a>
-                <a href="#"> Dolor sit </a>
-                <a href="#"> Consectetur </a>
-                <a href="#"> Ut enim ad </a>
+                <a href="#"> Residential Interior Design </a>
+                <a href="#"> Space Planning </a>
+                <a href="#"> Art and Decor Selection </a>
             </nav>
         </div>
 
@@ -266,10 +258,9 @@
         <div class="col-span-5 p-4 sm:col-span-2">
             <h4 class="text-xl uppercase"> Explore </h4>
             <nav>
-                <a href="#"> Lorem ipsum </a>
-                <a href="#"> Dolor sit </a>
-                <a href="#"> Consectetur </a>
-                <a href="#"> Ut enim ad </a>
+                <a href="#"> Portfolio </a>
+                <a href="#"> About us </a>
+                <a href="#"> Blog </a>
             </nav>
         </div>
 
